<?xml version="1.0"?>
<package format="2">
  <name>scout_mapper</name>
  <version>0.0.0</version>
  <description>The scout planner node</description>
  <maintainer email="swha@morai.ai">Sangwook Ha</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>
  <build_depend>scout_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>
  <exec_depend>scout_msgs</exec_depend>

</package>
